<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_register_game">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_yes"
            android:textColor="#75000000" />

        <RadioButton
            android:id="@+id/RadioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_no"
            android:textColor="#75000000" />

    </RadioGroup>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_wave__4_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageGame"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="#5000C9"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGame"
        tools:text="@string/text_game_information" />

    <EditText
        android:id="@+id/ediTextGame"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/box_purple"
        android:ems="10"
        android:hint="@string/text_name_game"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/editTextGameDescription"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_purple"
        android:ems="10"
        android:hint="@string/text_game_description"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/ediTextGame"
        app:layout_constraintStart_toStartOf="@+id/ediTextGame"
        app:layout_constraintTop_toBottomOf="@+id/ediTextGame" />

    <EditText
        android:id="@+id/editTextGameStudio"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_purple"
        android:ems="10"
        android:hint="@string/text_game_studio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextGameDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextGameDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameDescription" />

    <EditText
        android:id="@+id/editTextGameRelease"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_purple"
        android:ems="10"
        android:hint="@string/text_game_release"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/editTextGameStudio"
        app:layout_constraintStart_toStartOf="@+id/editTextGameStudio"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameStudio" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_complete_game"
        android:textColor="#5000C9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameRelease"
        tools:text="@string/text_complete_game" />

</androidx.constraintlayout.widget.ConstraintLayout>