<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newAccount">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPasswordRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmailRegister"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/editTextEmailRegister"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegister" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                app:srcCompat="@drawable/ic_camera" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_above_wave"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gamerLevel"
                android:textColor="#75000000"
                app:layout_constraintBottom_toTopOf="@+id/seekBarRegister"
                app:layout_constraintStart_toStartOf="@+id/editTextTextBirth"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextBirth" />

            <com.google.android.material.slider.Slider
                android:id="@+id/seekBarRegister"
                android:layout_width="220dp"
                android:layout_height="20dp"
                android:stepSize="1"
                android:value="1"
                android:valueFrom="1"
                android:valueTo="27"
                app:layout_constraintBottom_toTopOf="@+id/levelRegister"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/whatsName"
                android:inputType="textPersonName"
                android:textColor="#74000000"
                app:layout_constraintBottom_toTopOf="@+id/editTextCity"
                app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegister"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:text="@string/chose_picturee"
                android:textColor="#5900D2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/WhatsCity"
                android:inputType="textPersonName"
                android:textColor="#74000000"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextBirth"
                app:layout_constraintEnd_toEndOf="@+id/editTextName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/editTextName"
                app:layout_constraintTop_toBottomOf="@+id/editTextName" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_person" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:background="@drawable/ic_wave__4_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/newAccount"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="35dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_small_person"
                android:text="@string/dataPersonal"
                android:textColor="#5900D2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextName"
                app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegister"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister" />

            <EditText
                android:id="@+id/editTextTextBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/birthDate"
                android:inputType="textPersonName"
                android:textColor="#74000000"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="@+id/editTextCity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/editTextCity"
                app:layout_constraintTop_toBottomOf="@+id/editTextCity" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/consoles"
                app:layout_constraintBottom_toTopOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextBirth"
                app:layout_constraintHorizontal_bias="0.5"

                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:text="@string/data"
                android:textColor="#6200D3"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmailRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/favoriteConsole"
                android:textColor="#75000000"
                app:layout_constraintBottom_toTopOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/seekBarRegister"
                app:layout_constraintTop_toBottomOf="@+id/levelRegister" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexo:"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <EditText
                android:id="@+id/editTextEmailRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/levelRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Casual"
                android:textColor="#673AB7"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/seekBarRegister"
                app:layout_constraintTop_toBottomOf="@+id/seekBarRegister" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout7"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <RadioButton
                    android:id="@+id/radioMasculine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino"
                    android:textColor="#75000000" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="#75000000" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>